--- a/src/App.css
+++ b/src/App.css
@@ -7,23 +7,40 @@
   flex-direction: column;
 }
 
-@media screen and (max-width: 768px) {
-  .App {
-    border: red 5px solid;
-  }
-}
-
-.userlist {
+.userlist 
+{
   flex: 1;
   background-color: #331a12;
 }
 
-.chat {
+.chat 
+{
   flex: 12;
   background-color: silver;
 }
 
-.inputbox {
+.inputbox 
+{
   flex: 1;
   background-color: gray;
 }
+
+@media screen and (max-width: 768px) 
+{
+  .App 
+  {
+  }
+  .userlist
+  {
+    background-color: cadetblue;
+  }
+  .chat
+  {
+    background-color: darkseagreen;
+  }
+  .inputbox
+  {
+    background-color: lightblue;
+  }
+}
+
