--- a/src/FriendList.css
+++ b/src/FriendList.css
@@ -5,3 +5,9 @@
   border-bottom: 1px solid #e5e5e5;
   cursor: pointer;
 }
+
+.friend-name{
+  margin: 5%;
+  text-align: center;
+  align-items: center;
+}
